Add keyboard support for series section

--- a/frames/movies.html
+++ b/frames/movies.html
@@ -20,6 +20,8 @@
         <script src="../js/extensions/mousetrap.min.js"></script>
 
         <script src="../js/movies.js"></script>
+        <!-- Keyboard includes -->
+        <script src="../js/keyboard/general.js"></script>
         <script src="../js/keyboard/movies.js"></script>
 
         <!-- Modules -->
@@ -528,7 +530,6 @@
                 </div>
 
                 <div id="content-overlay" style="display: none;">
-                    <div id="customCSS"></div>
                     <div id="head-bar-detail" class="p-10" style="position: fixed; top: 40px;">
                         <div class="row" style="margin-right:0;">
                             <div class="input-group">
