--- a/frames/series.html
+++ b/frames/series.html
@@ -109,10 +109,10 @@
                     <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuSeries selected" onclick="main.changeFrame('series')">
 
                     </a>
-                    <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuAnimes" onclick="main.changeFrame('animes')">
+                    <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuTorrents" onclick="main.changeFrame('torrents')">
 
                     </a>
-                    <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuTorrents" onclick="main.changeFrame('settings')">
+                    <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuSettings" onclick="main.changeFrame('settings')">
 
                     </a>
 
