--- a/frames/movies.html
+++ b/frames/movies.html
@@ -102,10 +102,10 @@
                     <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuSeries" onclick="main.changeFrame('series')">
 
                     </a>
-                    <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuAnimes" onclick="main.changeFrame('animes')">
+                    <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuTorrents" onclick="main.changeFrame('torrents')">
 
                     </a>
-                    <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuTorrents" onclick="main.changeFrame('torrents')">
+                    <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuSettings" onclick="main.changeFrame('settings')">
 
                     </a>
 
