Add keyboard support for torrent section

--- a/frames/settings.html
+++ b/frames/settings.html
@@ -16,7 +16,11 @@
     <script type='text/javascript' src="../js/extensions/bootstrap.min.js"></script>
     <script src="../js/extensions/bootstrap-paginator.min.js"></script>
     <script src="../js/extensions/nwcontextmenu.js"></script>
+    <script src="../js/extensions/mousetrap.min.js"></script>
     <script src="../js/extensions/colpick.js"></script>
+
+    <!-- Keyboard includes -->
+    <script src="../js/keyboard/general.js"></script
 
     <!-- Modules -->
     <script>
