--- a/frames/torrents.html
+++ b/frames/torrents.html
@@ -13,6 +13,11 @@
         <script type='text/javascript' src="../js/extensions/bootstrap.min.js"></script>
         <script src="../js/extensions/bootstrap-paginator.min.js"></script>
         <script src="../js/extensions/nwcontextmenu.js"></script>
+        <script src="../js/extensions/mousetrap.min.js"></script>
+
+        <!-- Keyboard includes -->
+        <script src="../js/keyboard/general.js"></script>
+        <script src="../js/keyboard/torrents.js"></script>
 
         <!-- Modules -->
         <script>
